# reBotArm_control_py

./: .gitignore  README.md  README_Fr.md  README_JP.md  README_es.md  README_zh.md  motorbridge-0.1.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyproject.toml
config/: gripper.yaml
example/: 10_gravity_compensation_lock.py  7_arm_ik_control.py  8_arm_traj_control.py  9_gravity_compensation.py  gripper_test.py
reBotArm_control_py/actuator/: arm.py
reBotArm_control_py/controllers/: __init__.py  arm_ik_controller.py  arm_traj_controller.py
reBotArm_control_py/kinematics/: forward_kinematics.py
urdf/reBot-DevArm_fixend_description/urdf/: reBot-DevArm_fixend.urdf
