[project]
name = "rebotarm-control-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "meshcat>=0.3.2",
    "motorbridge",
    "pin>=3.9.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
motorbridge = { path = "motorbridge-0.1.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl" }
